--- a/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
@@ -117,8 +117,20 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Artists" xml:space="preserve">
+    <value>artists</value>
+  </data>
+  <data name="Id" xml:space="preserve">
+    <value>id</value>
+  </data>
   <data name="Name" xml:space="preserve">
+    <value>name</value>
+  </data>
+  <data name="NameUriPath" xml:space="preserve">
     <value>&amp;name=</value>
+  </data>
+  <data name="Response" xml:space="preserve">
+    <value>response</value>
   </data>
   <data name="SearchArtist" xml:space="preserve">
     <value>artist/search?</value>
