make  spaqrl query a bit simpler - just compare official webpages of artists

--- a/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
@@ -170,7 +170,7 @@ LIMIT 100</value>
     <value>PREFIX rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt;        
 PREFIX dbo:  &lt;http://dbpedia.org/ontology/&gt; 
 PREFIX schema:    &lt;http://schema.org/&gt;
-SELECT distinct ?artist ?artistName ?wiki ?homepage ?thumbnail
+SELECT distinct ?artist ?artistName ?wiki ?homepage min(?thumbnail)
 WHERE {{
 	VALUES ?type {{ schema:MusicGroup dbo:MusicalArtist }}
 	VALUES ?website {{ dbp:website foaf:homepage }}
@@ -181,7 +181,6 @@ WHERE {{
 		?artist foaf:isPrimaryTopicOf ?wiki .
 		?artist dbo:thumbnail ?thumbnail
 	}}
-	FILTER(CONTAINS(LCASE(STR(?artistName)), '{0}')) .
 	FILTER(lang(?artistName) = 'en') .
 	FILTER(CONTAINS(LCASE(STR(?wiki)), '{1}') || CONTAINS(LCASE(STR(?homepage)), '{2}'))
 }}
