--- a/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Abstract" xml:space="preserve">
+    <value>abstract</value>
+  </data>
   <data name="Artist" xml:space="preserve">
     <value>artist</value>
   </data>
@@ -170,21 +173,25 @@ LIMIT 100</value>
     <value>PREFIX rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt;        
 PREFIX dbo:  &lt;http://dbpedia.org/ontology/&gt; 
 PREFIX schema:    &lt;http://schema.org/&gt;
-SELECT distinct ?artist ?artistName ?wiki ?homepage min(?thumbnail)
+SELECT distinct ?artist ?artistName ?wiki ?homepage min(?thumbnail) ?abstract
 WHERE {{
 	VALUES ?type {{ schema:MusicGroup dbo:MusicalArtist }}
 	VALUES ?website {{ dbp:website foaf:homepage }}
 		?artist a ?type .
 		?artist rdfs:label ?artistName.
+		?artist dbo:abstract ?abstract .
+		?artist dbo:thumbnail ?thumbnail .
+		?artist foaf:isPrimaryTopicOf ?wiki . 
 	OPTIONAL {{
 		?artist ?website ?homepage .
-		?artist foaf:isPrimaryTopicOf ?wiki .
-		?artist dbo:thumbnail ?thumbnail
-	}}
-	FILTER(lang(?artistName) = 'en') .
-	FILTER(CONTAINS(LCASE(STR(?wiki)), '{1}') || CONTAINS(LCASE(STR(?homepage)), '{2}'))
+		}}
+
+  FILTER(lang(?artistName) = 'en') .
+  FILTER(lang(?abstract) = 'en') .
+FILTER(CONTAINS(LCASE(STR(?artistName)), '{0}')
+    || CONTAINS(LCASE(STR(?wiki)), '{1}') || CONTAINS(LCASE(STR(?homepage)), '{2}')) .
 }}
-GROUP BY ?artist ?artistName ?wiki ?homepage ?thumbnail
+GROUP BY ?artist ?artistName ?wiki ?homepage ?thumbnail ?abstract
 ORDER BY ?artistName
 LIMIT 1</value>
   </data>
