add search artists by region

--- a/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArtistPath" xml:space="preserve">
+    <value>&amp;artist=</value>
+  </data>
+  <data name="ArtistRadioType" xml:space="preserve">
+    <value>&amp;type=artist-radio</value>
+  </data>
   <data name="Artists" xml:space="preserve">
     <value>artists</value>
   </data>
@@ -129,6 +135,9 @@
   <data name="JsonFormat" xml:space="preserve">
     <value>&amp;format=json</value>
   </data>
+  <data name="LimitPath" xml:space="preserve">
+    <value>&amp;limit=true</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>name</value>
   </data>
@@ -138,14 +147,29 @@
   <data name="OfficialWebsite" xml:space="preserve">
     <value>official_url</value>
   </data>
+  <data name="PlaylistPath" xml:space="preserve">
+    <value>playlist/static?</value>
+  </data>
   <data name="Response" xml:space="preserve">
     <value>response</value>
+  </data>
+  <data name="ResultsPath" xml:space="preserve">
+    <value>&amp;results=40</value>
   </data>
   <data name="SearchArtist" xml:space="preserve">
     <value>artist/search?</value>
   </data>
+  <data name="SpotifyBucket" xml:space="preserve">
+    <value>&amp;bucket=id:spotify</value>
+  </data>
+  <data name="TracksBucket" xml:space="preserve">
+    <value>&amp;bucket=tracks</value>
+  </data>
   <data name="Urls" xml:space="preserve">
     <value>urls</value>
+  </data>
+  <data name="VarietyPath" xml:space="preserve">
+    <value>&amp;variety=1</value>
   </data>
   <data name="WebsiteArtist" xml:space="preserve">
     <value>artist/urls?</value>
