--- a/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
@@ -129,6 +129,12 @@
   <data name="ContainsPattern" xml:space="preserve">
     <value>contains(lcase(str(?g)), '{0}') ||</value>
   </data>
+  <data name="Country" xml:space="preserve">
+    <value>country</value>
+  </data>
+  <data name="CountryLabel" xml:space="preserve">
+    <value>countryLabel</value>
+  </data>
   <data name="EnLangQualifier" xml:space="preserve">
     <value>@en</value>
   </data>
@@ -153,6 +159,23 @@ FILTER({0})
         GROUP BY ?artist ?artistName
 ORDER BY ?artistName
 LIMIT 100</value>
+  </data>
+  <data name="GetCountriesOfEurope" xml:space="preserve">
+    <value>PREFIX rdf: &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#&gt;
+PREFIX yago: &lt;http://dbpedia.org/class/yago/&gt;
+PREFIX dbo: &lt;http://dbpedia.org/ontology/&gt;
+ 
+SELECT ?country ?countryLabel min(?thumbnail) as ?thumbnail
+WHERE {{
+    ?country rdf:type yago:EuropeanCountries .
+    ?country rdf:type dbo:Country .
+    ?country rdfs:label ?countryLabel.
+OPTIONAL {{
+    ?country dbo:thumbnail ?thumbnail
+}}
+FILTER(lang(?countryLabel)='en')
+}}
+ORDER BY ?countryLabel</value>
   </data>
   <data name="GetGenresByArtist" xml:space="preserve">
     <value>PREFIX rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt;        
