--- a/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/SparqlResources.resx
@@ -241,7 +241,7 @@ LIMIT 1</value>
 PREFIX dbo:  &lt;http://dbpedia.org/ontology/&gt; 
 PREFIX schema:    &lt;http://schema.org/&gt;
 
-SELECT DISTINCT ?artist ?artistName
+SELECT DISTINCT ?artist ?artistName  min(?thumbnail) as ?thumbnail
 WHERE {{
  VALUES ?type {{ schema:MusicGroup dbo:MusicalArtist }}
  VALUES ?hometown {{ dbo:hometown dbo:birthplace }}
@@ -250,6 +250,9 @@ WHERE {{
           ?artist ?hometown ?city.
   ?city dbo:country ?country.
   ?country rdfs:label '{0}'@en.
+OPTIONAL {{
+  ?artist dbo:thumbnail ?thumbnail
+}}
   FILTER(lang(?artistName)='en')
 }}
 LIMIT 20</value>
