--- a/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
+++ b/application/proxy/Muxar/Muxar.BrightStarDb/EchonestResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="ArtistDescriptionType" xml:space="preserve">
+    <value>&amp;type=artist-description</value>
+  </data>
   <data name="ArtistId" xml:space="preserve">
     <value>artist_id</value>
   </data>
@@ -131,6 +134,9 @@
   </data>
   <data name="Artists" xml:space="preserve">
     <value>artists</value>
+  </data>
+  <data name="DescriptionPath" xml:space="preserve">
+    <value>&amp;description=</value>
   </data>
   <data name="ForeignId" xml:space="preserve">
     <value>foreign_id</value>
@@ -153,6 +159,9 @@
   <data name="LimitPath" xml:space="preserve">
     <value>&amp;limit=true</value>
   </data>
+  <data name="MoodPath" xml:space="preserve">
+    <value>&amp;mood=</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>name</value>
   </data>
@@ -173,6 +182,12 @@
   </data>
   <data name="SearchArtist" xml:space="preserve">
     <value>artist/search?</value>
+  </data>
+  <data name="SongPath" xml:space="preserve">
+    <value>&amp;song_id=</value>
+  </data>
+  <data name="SongRadioType" xml:space="preserve">
+    <value>&amp;type=song-radio</value>
   </data>
   <data name="Songs" xml:space="preserve">
     <value>songs</value>
